<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginLeft="20dp">

        <TextView
            android:id="@+id/txt_altura"
            android:layout_width="180dp"
            android:gravity="center"
            android:layout_height="30dp"
            android:text="@string/txt_label_altura"
            android:textSize="7pt"
            android:fontFamily="@font/roboto_light"
             />

        <EditText
            android:id="@+id/altura"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:textSize="7pt"
            android:fontFamily="@font/roboto_light"
            android:hint="ex: 1.60"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginLeft="20dp">

        <TextView
            android:id="@+id/txt_peso"
            android:layout_width="180dp"
            android:gravity="center"
            android:layout_height="30dp"
            android:textSize="7pt"
            android:text="@string/txt_label_peso"
            android:fontFamily="@font/roboto_light"
            />

        <EditText
            android:id="@+id/peso"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:textSize="7pt"
            android:fontFamily="@font/roboto_light"
            android:hint="ex: 65.8"
            android:imeOptions="actionDone"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/self_destruct"
        />


    <TableLayout
        android:id="@+id/tabela"
        android:layout_width="380dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp">

        <TableRow></TableRow>

        <TextView
            android:layout_width="15dp"
            android:layout_height="45dp"
            android:background="@drawable/selector"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/txt_label_table_title"
            android:textSize="9pt" />

        <TableRow>

            <TextView
                android:id="@+id/txt_imc"
                android:layout_width="134dp"
                android:layout_height="40dp"
                android:background="@drawable/title_colunas"
                android:fontFamily="@font/roboto_light"
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/txt_label_imc" />

            <TextView
                android:id="@+id/txt_classificacao"
                android:layout_width="128dp"
                android:layout_height="40dp"
                android:background="@drawable/title_colunas"
                android:fontFamily="@font/roboto_light"
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/txt_label_classf" />

            <TextView
                android:id="@+id/txt_grau"
                android:layout_width="118dp"
                android:layout_height="40dp"
                android:background="@drawable/title_colunas"
                android:fontFamily="@font/roboto_light"
                android:gravity="center"
                android:padding="4dip"

                android:text="@string/txt_label_grau" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/linha1"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/menor"
            android:layout_width="139dp"
            android:layout_height="40dp"
            android:background="@drawable/linhas"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:padding="3dip"
            android:textSize="6pt"
            android:text="@string/txt_label_imc1"
             />

        <TextView
            android:id="@+id/magreza"
            android:layout_width="128dp"
            android:layout_height="40dp"
            android:background="@drawable/linhas"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:textSize="6pt"
            android:padding="3dip"
            android:text="@string/txt_label_magreza" />

        <TextView
            android:id="@+id/zero"
            android:layout_width="129dp"
            android:layout_height="40dp"
            android:background="@drawable/linhas"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:padding="3dip"
            android:text="@string/txt_label_0" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linha2"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/entre"
            android:layout_width="139dp"
            android:layout_height="40dp"
            android:background="@drawable/linhas"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:padding="3dip"
            android:text="@string/txt_label_imc2"
            android:textSize="6pt" />

        <TextView
            android:id="@+id/normal"
            android:layout_width="128dp"
            android:layout_height="40dp"
            android:background="@drawable/linhas"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:padding="3dip"
            android:textSize="6pt"
            android:text="@string/txt_label_normal" />

        <TextView
            android:id="@+id/zero2"
            android:layout_width="129dp"
            android:layout_height="40dp"
            android:background="@drawable/linhas"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:padding="3dip"
            android:text="@string/txt_label_00" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linha3"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/entre2"
            android:layout_width="139dp"
            android:layout_height="40dp"
            android:background="@drawable/linhas"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:padding="3dip"
            android:text="@string/txt_label_imc3"
            android:textSize="6pt" />

        <TextView
            android:id="@+id/sobrepeso"
            android:layout_width="128dp"
            android:layout_height="40dp"
            android:background="@drawable/linhas"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:padding="3dip"
            android:textSize="6pt"
            android:text="@string/txt_label_sobrepeso" />

        <TextView
            android:id="@+id/grauI"
            android:layout_width="129dp"
            android:layout_height="40dp"
            android:background="@drawable/linhas"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:padding="3dip"
            android:text="@string/txt_label_1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linha4"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/entre3"
            android:layout_width="139dp"
            android:layout_height="40dp"
            android:background="@drawable/linhas"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:padding="3dip"
            android:text="@string/txt_label_imc4"
            android:textSize="6pt" />

        <TextView
            android:id="@+id/obesidade"
            android:layout_width="128dp"
            android:layout_height="40dp"
            android:background="@drawable/linhas"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:padding="3dip"
            android:textSize="6pt"
            android:text="@string/txt_label_obesidade" />

        <TextView
            android:id="@+id/grauII"
            android:layout_width="129dp"
            android:layout_height="40dp"
            android:background="@drawable/linhas"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:padding="3dip"
            android:text="@string/txt_label_2" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linha5"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/entre4"
            android:layout_width="139dp"
            android:layout_height="40dp"
            android:background="@drawable/linhas"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:padding="3dip"
            android:text="@string/txt_label_imc5"
            android:textSize="6pt" />

        <TextView
            android:id="@+id/obesidade_grave"
            android:layout_width="128dp"
            android:layout_height="40dp"
            android:background="@drawable/linhas"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:padding="3dip"
            android:textSize="6pt"
            android:text="@string/txt_label_obesidade_grave" />

        <TextView
            android:id="@+id/grauIII"
            android:layout_width="129dp"
            android:layout_height="40dp"
            android:background="@drawable/linhas"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:padding="3dip"
            android:text="@string/txt_label_3" />

    </LinearLayout>

    <TextView
        android:id="@+id/resultado"
        android:layout_width="307dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/resultado"
        android:fontFamily="@font/roboto_light"
        android:padding="3dip"
        android:text="Seu IMC= "
        android:textColor="@color/black"
        android:textSize="13pt" />


</LinearLayout>


